Sun Mar 11 18:57:50 2007  Akinori MUSHA  <knu@iDaemons.org>

	* misc/README: Add a note about ruby-electric.el. 

	* misc/ruby-mode.el (ruby-non-block-do-re): Fix
	  ruby-non-block-do-re. [ruby-core:03719]

	* misc/inf-ruby.el: Synchronize the comment section with trunk.

	* misc/README, misc/rdebug.el: Add rdebug.el, Emacs ruby-debug
	  interface based on rubydb3x.el; submitted by Martin Nordholts
	  <enselic AT gmail.com> in [ruby-bugs:PR#9023].

Sun Mar 11 17:45:51 2007  Akinori MUSHA  <knu@iDaemons.org>

	* ext/dl/mkcallback.rb (mkfunc): Make sure that a callback
	  function is found in the function table before trying to call
	  it; submitted by sheepman <sheepman AT sheepman.sakura.ne.jp>
	  in [ruby-dev:30524].

Tue Mar  6 18:58:37 2007  Keiju Ishitsuka  <keiju@ruby-lang.org>
	
	* lib/shell/process-controller.rb: fix thread synchronization
	  problem for [ruby-dev:30477].
	
Sun Mar  4 23:53:27 2007  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (mv): could not move a directory between
	  different filesystems. [ruby-dev:30411]

Sat Mar  3 21:41:31 2007  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (stack_check): Unset inline to fix build with GCC 3.4.6;
	  submitted by: NISHIMATSU Takeshi <t_nissie AT yahoo.co.jp> in
	  [ruby-list:43218].
	  cf. http://gcc.gnu.org/bugzilla/show_bug.cgi?id=24556

Sat Mar  3 16:30:39 2007  Akinori MUSHA  <knu@iDaemons.org>

	* env.h (SCOPE_CLONE): Introduce a new scope flag to prevent a
	  local_tbl region from getting freed many times; submitted by
	  Chikanaga Tomoyuki <chikanag AT nippon-control-system.co.jp> in
	  [ruby-dev:30460].

	* eval.c (proc_invoke): Ditto.

	* gc.c (obj_free): Ditto.

	* parse.y (top_local_setup_gen): Ditto.

Sat Mar  3 15:41:33 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (stmt, arg): should not omit lhs of OP_ASGN1 even if
	  empty.  [ruby-dev:30452]

Wed Feb 28 20:51:32 2007  URABE Shyouhei  <shyouhei@ruby-lang.org>
