@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2007-03-12"
 #define RUBY_VERSION_CODE 185
 #define RUBY_RELEASE_CODE 20070312
-#define RUBY_PATCHLEVEL 31
+#define RUBY_PATCHLEVEL 32
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
@@ -11,7 +11,9 @@
 #define RUBY_RELEASE_MONTH 3
 #define RUBY_RELEASE_DAY 12
 
+#ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
 RUBY_EXTERN const char ruby_release_date[];
 RUBY_EXTERN const char ruby_platform[];
 RUBY_EXTERN const int ruby_patchlevel;
+#endif
